--- a/test-output/index.html
+++ b/test-output/index.html
@@ -155,35 +155,6 @@
           <div class="suite-Open_Cart_Test_Regression_PW_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.qa.opencart.tests.LoginPageTest</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="appLoginTest">
-                  </a> <!-- appLoginTest -->
-                  <span class="method-name">appLoginTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="forgotPwdLinkExistTest">
-                  </a> <!-- forgotPwdLinkExistTest -->
-                  <span class="method-name">forgotPwdLinkExistTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginPageNavigationTest">
-                  </a> <!-- loginPageNavigationTest -->
-                  <span class="method-name">loginPageNavigationTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Open_Cart_Test_Regression_PW_Suite-class-passed -->
-          <div class="suite-Open_Cart_Test_Regression_PW_Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
               <span class="class-name">com.qa.opencart.tests.HomePageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -227,6 +198,35 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Open_Cart_Test_Regression_PW_Suite-class-passed -->
+          <div class="suite-Open_Cart_Test_Regression_PW_Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.qa.opencart.tests.LoginPageTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="appLoginTest">
+                  </a> <!-- appLoginTest -->
+                  <span class="method-name">appLoginTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="forgotPwdLinkExistTest">
+                  </a> <!-- forgotPwdLinkExistTest -->
+                  <span class="method-name">forgotPwdLinkExistTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="loginPageNavigationTest">
+                  </a> <!-- loginPageNavigationTest -->
+                  <span class="method-name">loginPageNavigationTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Open_Cart_Test_Regression_PW_Suite-class-passed -->
         </div> <!-- panel Open_Cart_Test_Regression_PW_Suite -->
         <div panel-name="test-xml-Open_Cart_Test_Regression_PW_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -241,13 +241,11 @@
     &lt;listener class-name=&quot;com.qa.opencart.listeners.ExtentReportListener&quot;/&gt;
   &lt;/listeners&gt;
   &lt;test thread-count=&quot;2&quot; parallel=&quot;tests&quot; name=&quot;Open Cart Home Page Test&quot; verbose=&quot;4&quot;&gt;
-    &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.qa.opencart.tests.HomePageTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Open Cart Home Page Test --&gt;
   &lt;test thread-count=&quot;2&quot; parallel=&quot;tests&quot; name=&quot;Open Cart Login Page Test&quot; verbose=&quot;4&quot;&gt;
-    &lt;parameter name=&quot;browser&quot; value=&quot;firefox&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.qa.opencart.tests.LoginPageTest&quot;/&gt;
     &lt;/classes&gt;
@@ -296,31 +294,31 @@ data.addRows(8);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'searchTest')
 data.setCell(0, 2, 'com.qa.opencart.tests.HomePageTest')
-data.setCell(0, 3, 11857);
+data.setCell(0, 3, 13518);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'searchTest')
 data.setCell(1, 2, 'com.qa.opencart.tests.HomePageTest')
-data.setCell(1, 3, 10560);
+data.setCell(1, 3, 10416);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'searchTest')
 data.setCell(2, 2, 'com.qa.opencart.tests.HomePageTest')
-data.setCell(2, 3, 10391);
+data.setCell(2, 3, 10340);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'appLoginTest')
+data.setCell(3, 1, 'loginPageNavigationTest')
 data.setCell(3, 2, 'com.qa.opencart.tests.LoginPageTest')
-data.setCell(3, 3, 547);
+data.setCell(3, 3, 3756);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'homePageTitleTest')
-data.setCell(4, 2, 'com.qa.opencart.tests.HomePageTest')
-data.setCell(4, 3, 451);
+data.setCell(4, 1, 'appLoginTest')
+data.setCell(4, 2, 'com.qa.opencart.tests.LoginPageTest')
+data.setCell(4, 3, 1349);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'loginPageNavigationTest')
-data.setCell(5, 2, 'com.qa.opencart.tests.LoginPageTest')
-data.setCell(5, 3, 392);
+data.setCell(5, 1, 'homePageTitleTest')
+data.setCell(5, 2, 'com.qa.opencart.tests.HomePageTest')
+data.setCell(5, 3, 675);
 data.setCell(6, 0, 6)
 data.setCell(6, 1, 'forgotPwdLinkExistTest')
 data.setCell(6, 2, 'com.qa.opencart.tests.LoginPageTest')
-data.setCell(6, 3, 26);
+data.setCell(6, 3, 198);
 data.setCell(7, 0, 7)
 data.setCell(7, 1, 'homePageURLTest')
 data.setCell(7, 2, 'com.qa.opencart.tests.HomePageTest')
@@ -329,7 +327,7 @@ window.suiteTableData['Open_Cart_Test_Regression_PW_Suite']= { tableData: data, 
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 34 seconds</span>
+              <span class="suite-total-time">Total running time: 40 seconds</span>
               <div id="times-div-Open_Cart_Test_Regression_PW_Suite">
               </div> <!-- times-div-Open_Cart_Test_Regression_PW_Suite -->
             </div> <!-- times-div -->
@@ -357,58 +355,64 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.HomePageTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
-                <span class="method-name">setup(chrome)</span>
+                <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.LoginPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
-                <span class="method-name">setup(firefox)</span>
+                <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">loginPageNavigationTest</span>
-                <span class="method-start">7869 ms</span>
+                <span class="method-start">15022 ms</span>
               </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">forgotPwdLinkExistTest</span>
-                <span class="method-start">8289 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">appLoginTest</span>
-                <span class="method-start">8318 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-test after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">8870 ms</span>
-              </div> <!-- configuration-test after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.HomePageTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">homePageTitleTest</span>
-                <span class="method-start">14061 ms</span>
+                <span class="method-start">15384 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">homePageURLTest</span>
-                <span class="method-start">14515 ms</span>
+                <span class="method-start">16070 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">searchTest(Macbook)</span>
-                <span class="method-start">14522 ms</span>
+                <span class="method-start">16080 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.qa.opencart.tests.LoginPageTest</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">forgotPwdLinkExistTest</span>
+                <span class="method-start">18782 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">searchTest(imac)</span>
-                <span class="method-start">26387 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">searchTest(Samsung)</span>
-                <span class="method-start">36959 ms</span>
+                <span class="method-name">appLoginTest</span>
+                <span class="method-start">18984 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">47359 ms</span>
+                <span class="method-start">20338 ms</span>
+              </div> <!-- configuration-test after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.qa.opencart.tests.HomePageTest</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">searchTest(imac)</span>
+                <span class="method-start">29610 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">searchTest(Samsung)</span>
+                <span class="method-start">40041 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-test after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">50390 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
