--- a/test-output/old/Open Cart Test Regression PW Suite/methods-alphabetical.html
+++ b/test-output/old/Open Cart Test Regression PW Suite/methods-alphabetical.html
@@ -1,28 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Open Cart Test Regression PW Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7b6b6f">  <td>24/11/04 00:58:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.appLoginTest()[pri:3, instance:com.qa.opencart.tests.LoginPageTest@3e5499cc]">appLoginTest</td> 
-  <td>TestNG-tests-2@965226728</td>   <td></td> </tr>
-<tr bgcolor="7b6b6f">  <td>24/11/04 00:58:35</td>   <td>-29</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.forgotPwdLinkExistTest()[pri:2, instance:com.qa.opencart.tests.LoginPageTest@3e5499cc]">forgotPwdLinkExistTest</td> 
-  <td>TestNG-tests-2@965226728</td>   <td></td> </tr>
-<tr bgcolor="b5e8bb">  <td>24/11/04 00:58:41</td>   <td>5743</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.homePageTitleTest()[pri:0, instance:com.qa.opencart.tests.HomePageTest@40cb698e]">homePageTitleTest</td> 
-  <td>TestNG-tests-1@1262443716</td>   <td></td> </tr>
-<tr bgcolor="b5e8bb">  <td>24/11/04 00:58:41</td>   <td>6197</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.homePageURLTest()[pri:0, instance:com.qa.opencart.tests.HomePageTest@40cb698e]">homePageURLTest</td> 
-  <td>TestNG-tests-1@1262443716</td>   <td></td> </tr>
-<tr bgcolor="7b6b6f">  <td>24/11/04 00:58:35</td>   <td>-449</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageNavigationTest()[pri:1, instance:com.qa.opencart.tests.LoginPageTest@3e5499cc]">loginPageNavigationTest</td> 
-  <td>TestNG-tests-2@965226728</td>   <td></td> </tr>
-<tr bgcolor="b5e8bb">  <td>24/11/04 00:58:41</td>   <td>6204</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.searchTest(java.lang.String)[pri:0, instance:com.qa.opencart.tests.HomePageTest@40cb698e]">searchTest</td> 
-  <td>TestNG-tests-1@1262443716</td>   <td></td> </tr>
-<tr bgcolor="b5e8bb">  <td>24/11/04 00:58:53</td>   <td>18069</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.searchTest(java.lang.String)[pri:0, instance:com.qa.opencart.tests.HomePageTest@40cb698e]">searchTest</td> 
-  <td>TestNG-tests-1@1262443716</td>   <td></td> </tr>
-<tr bgcolor="b5e8bb">  <td>24/11/04 00:59:04</td>   <td>28641</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.searchTest(java.lang.String)[pri:0, instance:com.qa.opencart.tests.HomePageTest@40cb698e]">searchTest</td> 
-  <td>TestNG-tests-1@1262443716</td>   <td></td> </tr>
-<tr bgcolor="6dbd89">  <td>24/11/04 00:58:27</td>   <td>-8313</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.qa.opencart.tests.HomePageTest@40cb698e]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1262443716</td>   <td></td> </tr>
-<tr bgcolor="6dbd89">  <td>24/11/04 00:58:27</td>   <td>-8313</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@3e5499cc]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@965226728</td>   <td></td> </tr>
-<tr bgcolor="6dbd89">  <td>24/11/04 00:58:36</td>   <td>552</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@3e5499cc]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@965226728</td>   <td></td> </tr>
-<tr bgcolor="6dbd89">  <td>24/11/04 00:59:14</td>   <td>39041</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.HomePageTest@40cb698e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1262443716</td>   <td></td> </tr>
+<tr bgcolor="fc6cc3">  <td>24/11/09 13:26:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.appLoginTest()[pri:3, instance:com.qa.opencart.tests.LoginPageTest@201b6b6f]">appLoginTest</td> 
+  <td>TestNG-tests-2@1431157250</td>   <td></td> </tr>
+<tr bgcolor="fc6cc3">  <td>24/11/09 13:26:07</td>   <td>-202</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.forgotPwdLinkExistTest()[pri:2, instance:com.qa.opencart.tests.LoginPageTest@201b6b6f]">forgotPwdLinkExistTest</td> 
+  <td>TestNG-tests-2@1431157250</td>   <td></td> </tr>
+<tr bgcolor="9fda69">  <td>24/11/09 13:26:03</td>   <td>-3600</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.homePageTitleTest()[pri:0, instance:com.qa.opencart.tests.HomePageTest@607fbe09]">homePageTitleTest</td> 
+  <td>TestNG-tests-1@406496759</td>   <td></td> </tr>
+<tr bgcolor="9fda69">  <td>24/11/09 13:26:04</td>   <td>-2914</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.homePageURLTest()[pri:0, instance:com.qa.opencart.tests.HomePageTest@607fbe09]">homePageURLTest</td> 
+  <td>TestNG-tests-1@406496759</td>   <td></td> </tr>
+<tr bgcolor="fc6cc3">  <td>24/11/09 13:26:03</td>   <td>-3962</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageNavigationTest()[pri:1, instance:com.qa.opencart.tests.LoginPageTest@201b6b6f]">loginPageNavigationTest</td> 
+  <td>TestNG-tests-2@1431157250</td>   <td></td> </tr>
+<tr bgcolor="9fda69">  <td>24/11/09 13:26:04</td>   <td>-2904</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.searchTest(java.lang.String)[pri:0, instance:com.qa.opencart.tests.HomePageTest@607fbe09]">searchTest</td> 
+  <td>TestNG-tests-1@406496759</td>   <td></td> </tr>
+<tr bgcolor="9fda69">  <td>24/11/09 13:26:18</td>   <td>10626</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.searchTest(java.lang.String)[pri:0, instance:com.qa.opencart.tests.HomePageTest@607fbe09]">searchTest</td> 
+  <td>TestNG-tests-1@406496759</td>   <td></td> </tr>
+<tr bgcolor="9fda69">  <td>24/11/09 13:26:28</td>   <td>21057</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.searchTest(java.lang.String)[pri:0, instance:com.qa.opencart.tests.HomePageTest@607fbe09]">searchTest</td> 
+  <td>TestNG-tests-1@406496759</td>   <td></td> </tr>
+<tr bgcolor="f176f6">  <td>24/11/09 13:25:48</td>   <td>-18982</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.qa.opencart.tests.HomePageTest@607fbe09]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@406496759</td>   <td></td> </tr>
+<tr bgcolor="f176f6">  <td>24/11/09 13:25:48</td>   <td>-18982</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@201b6b6f]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1431157250</td>   <td></td> </tr>
+<tr bgcolor="f176f6">  <td>24/11/09 13:26:08</td>   <td>1354</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@201b6b6f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1431157250</td>   <td></td> </tr>
+<tr bgcolor="f176f6">  <td>24/11/09 13:26:38</td>   <td>31406</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.HomePageTest@607fbe09]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@406496759</td>   <td></td> </tr>
 </table>
